--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "@jonas-salomonsson/test",
   "version": "0.1.0",
   "description": "testing",
   "main": "index.js",
