--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@jonas-salomonsson/test",
+  "name": "josa_test",
   "version": "0.1.0",
   "description": "testing",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter nyan"
+    "test": "mocha --reporter nyan",
+    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/jonas-salomonsson/test#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^4.0.1"
   }
 }
